--- a/_posts/2015-09-26.md
+++ b/_posts/2015-09-26.md
@@ -1,3 +1,11 @@
+---
+layout: post
+keywords: test
+description: test
+title: "test"
+icon:file-alt
+---
+
 ### 新的博客
 
 > New Departure for me，人生苦短，我用Python.
