--- a/_posts/2016-03-26.md
+++ b/_posts/2016-03-26.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-keywords: test
-description: test
-title: "test"
+keywords: 散记
+description: 生活
+title: "十万嬉皮"
 categories: [散记]
 tags: [生活]
 group: archive
